Added applications and mysql.

--- a/application/b/index.html
+++ b/application/b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Application</title>
+        <title>Application B</title>
     </head>
     <body>
-        <h1>Application - index.html</h1>
+        <h1>Application B - index.html</h1>
     </body>
 </html>
